更新README文件 完成EditorWindows翻译

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -10,72 +10,72 @@ Collapsed=0
 
 [Window][Level]
 Pos=0,19
-Size=808,779
+Size=1470,1008
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Environment]
-Pos=1015,19
-Size=208,779
+Pos=1472,19
+Size=208,1008
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Shortcuts]
-Pos=10,546
+Pos=70,660
 Size=389,208
 Collapsed=0
 
 [Window][Build]
-Pos=1095,19
-Size=128,779
+Pos=1552,20
+Size=128,1007
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Tile Selector]
-Pos=723,19
-Size=500,779
+Pos=1180,20
+Size=500,1007
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][###Light Catalog]
-Pos=1663,22
-Size=257,478
+Pos=1423,20
+Size=257,497
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Brush]
-Pos=1663,502
-Size=257,489
+Pos=1423,519
+Size=257,508
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Add Effect]
-Pos=854,19
-Size=369,381
+Pos=1311,20
+Size=369,492
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Active Effects]
-Pos=854,402
-Size=369,193
+Pos=1311,514
+Size=369,250
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Effect Options]
-Pos=854,597
-Size=369,201
+Pos=1311,766
+Size=369,261
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Props]
-Pos=810,19
-Size=413,384
+Pos=1267,20
+Size=413,497
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Prop Options]
-Pos=810,405
-Size=413,393
+Pos=1267,519
+Size=413,508
 Collapsed=0
 DockId=0x00000013,0
 
@@ -86,16 +86,16 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=1223,779
+Size=1680,1008
 Collapsed=0
 
 [Window][Preferences]
-Pos=286,204
+Pos=197,104
 Size=650,390
 Collapsed=0
 
 [Window][###File Browser]
-Pos=91,139
+Pos=80,140
 Size=1040,520
 Collapsed=0
 
@@ -104,8 +104,18 @@ Pos=529,180
 Size=212,153
 Collapsed=0
 
+[Window][Render]
+Pos=408,171
+Size=240,420
+Collapsed=0
+
+[Window][Guide]
+Pos=104,168
+Size=650,468
+Collapsed=0
+
 [Docking][Data]
-DockSpace               ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1223,779 Split=X Selected=0x65657392
+DockSpace               ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1680,1008 Split=X Selected=0x65657392
   DockNode              ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1710,969 Split=X Selected=0x65657392
     DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=1790,969 Split=X Selected=0x65657392
       DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=1418,969 Split=X Selected=0x65657392
