完成快捷键翻译

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Level]
 Pos=0,19
-Size=1470,1008
+Size=1178,1008
 Collapsed=0
 DockId=0x00000014,0
 
@@ -21,61 +21,61 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Shortcuts]
-Pos=70,660
+Pos=396,396
 Size=389,208
 Collapsed=0
 
 [Window][Build]
-Pos=1552,20
-Size=128,1007
+Pos=1552,19
+Size=128,1008
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Tile Selector]
-Pos=1180,20
-Size=500,1007
+Pos=1180,19
+Size=500,1008
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][###Light Catalog]
-Pos=1423,20
-Size=257,497
+Pos=1217,19
+Size=257,405
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Brush]
-Pos=1423,519
-Size=257,508
+Pos=1217,426
+Size=257,415
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Add Effect]
-Pos=1311,20
-Size=369,492
+Pos=1105,19
+Size=369,402
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Active Effects]
-Pos=1311,514
-Size=369,250
+Pos=1105,423
+Size=369,204
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Effect Options]
-Pos=1311,766
-Size=369,261
+Pos=1105,629
+Size=369,212
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Props]
-Pos=1267,20
-Size=413,497
+Pos=1061,19
+Size=413,405
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Prop Options]
-Pos=1267,519
-Size=413,508
+Pos=1061,426
+Size=413,415
 Collapsed=0
 DockId=0x00000013,0
 
@@ -112,6 +112,11 @@ Collapsed=0
 [Window][Guide]
 Pos=104,168
 Size=650,468
+Collapsed=0
+
+[Window][快捷键]
+Pos=124,332
+Size=445,274
 Collapsed=0
 
 [Docking][Data]
