--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -10,13 +10,13 @@ Collapsed=0
 
 [Window][Level]
 Pos=0,19
-Size=1178,1008
+Size=1228,1008
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Environment]
-Pos=1472,19
-Size=208,1008
+Pos=1266,19
+Size=208,822
 Collapsed=0
 DockId=0x00000002,0
 
@@ -26,56 +26,56 @@ Size=389,208
 Collapsed=0
 
 [Window][Build]
-Pos=1552,19
-Size=128,1008
+Pos=1528,19
+Size=152,1008
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Tile Selector]
-Pos=1180,19
-Size=500,1008
+Pos=1230,19
+Size=450,1008
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][###Light Catalog]
-Pos=1217,19
-Size=257,405
+Pos=1423,19
+Size=257,497
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Brush]
-Pos=1217,426
-Size=257,415
+Pos=1423,518
+Size=257,509
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Add Effect]
-Pos=1105,19
-Size=369,402
+Pos=1311,19
+Size=369,493
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Active Effects]
-Pos=1105,423
-Size=369,204
+Pos=1311,514
+Size=369,250
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Effect Options]
-Pos=1105,629
-Size=369,212
+Pos=1311,766
+Size=369,261
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Props]
-Pos=1061,19
-Size=413,405
+Pos=1267,19
+Size=413,497
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Prop Options]
-Pos=1061,426
-Size=413,415
+Pos=1267,518
+Size=413,509
 Collapsed=0
 DockId=0x00000013,0
 
@@ -110,35 +110,43 @@ Size=240,420
 Collapsed=0
 
 [Window][Guide]
-Pos=104,168
+Pos=110,190
 Size=650,468
 Collapsed=0
 
 [Window][快捷键]
-Pos=124,332
+Pos=90,504
 Size=445,274
 Collapsed=0
 
+[Window][环境]
+Pos=1430,19
+Size=250,1008
+Collapsed=0
+DockId=0x00000016,0
+
 [Docking][Data]
-DockSpace               ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1680,1008 Split=X Selected=0x65657392
-  DockNode              ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1710,969 Split=X Selected=0x65657392
-    DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=1790,969 Split=X Selected=0x65657392
-      DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=1418,969 Split=X Selected=0x65657392
-        DockNode        ID=0x0000000A Parent=0x00000005 SizeRef=1661,969 Split=X Selected=0x65657392
-          DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1549,969 Split=X Selected=0x65657392
-            DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=1505,969 CentralNode=1 Selected=0x65657392
-            DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=413,969 Split=Y
-              DockNode  ID=0x00000012 Parent=0x00000011 SizeRef=413,174 Selected=0x1A02B0A3
-              DockNode  ID=0x00000013 Parent=0x00000011 SizeRef=413,178 Selected=0x7A56252A
-          DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=369,969 Split=Y
-            DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=369,123 Selected=0xDCDF1A23
-            DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=369,128 Split=Y
-              DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=369,123 Selected=0xC4692E8D
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=369,128 Selected=0xECF6175A
-        DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=257,969 Split=Y
-          DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=233,218 Selected=0x56944108
-          DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=233,223 Selected=0xCA3ECDE9
-      DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=500,969 Selected=0x8B39F883
-    DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=128,969 Selected=0x57F56F05
-  DockNode              ID=0x00000002 Parent=0x7C6B3D9B SizeRef=208,969 Selected=0xD04E21C8
+DockSpace                 ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1680,1008 Split=X Selected=0x65657392
+  DockNode                ID=0x00000015 Parent=0x7C6B3D9B SizeRef=944,785 Split=X
+    DockNode              ID=0x00000001 Parent=0x00000015 SizeRef=1710,969 Split=X Selected=0x65657392
+      DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=1164,969 Split=X Selected=0x65657392
+        DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=1228,969 Split=X Selected=0x65657392
+          DockNode        ID=0x0000000A Parent=0x00000005 SizeRef=1661,969 Split=X Selected=0x65657392
+            DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1549,969 Split=X Selected=0x65657392
+              DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=1505,969 CentralNode=1 Selected=0x65657392
+              DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=413,969 Split=Y
+                DockNode  ID=0x00000012 Parent=0x00000011 SizeRef=413,174 Selected=0x1A02B0A3
+                DockNode  ID=0x00000013 Parent=0x00000011 SizeRef=413,178 Selected=0x7A56252A
+            DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=369,969 Split=Y
+              DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=369,123 Selected=0xDCDF1A23
+              DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=369,128 Split=Y
+                DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=369,123 Selected=0xC4692E8D
+                DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=369,128 Selected=0xECF6175A
+          DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=257,969 Split=Y
+            DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=233,218 Selected=0x56944108
+            DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=233,223 Selected=0xCA3ECDE9
+        DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=450,969 Selected=0x8B39F883
+      DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=152,969 Selected=0x57F56F05
+    DockNode              ID=0x00000002 Parent=0x00000015 SizeRef=208,969 Selected=0xD04E21C8
+  DockNode                ID=0x00000016 Parent=0x7C6B3D9B SizeRef=250,785 Selected=0xB0C67BD0
 
