--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Level]
 Pos=0,19
-Size=1228,1008
+Size=1044,822
 Collapsed=0
 DockId=0x00000014,0
 
@@ -86,7 +86,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=1680,1008
+Size=1474,822
 Collapsed=0
 
 [Window][Preferences]
@@ -120,33 +120,49 @@ Size=445,274
 Collapsed=0
 
 [Window][环境]
-Pos=1430,19
-Size=250,1008
+Pos=1224,19
+Size=250,822
 Collapsed=0
 DockId=0x00000016,0
 
+[Window][建造]
+Pos=1318,19
+Size=156,822
+Collapsed=0
+DockId=0x00000018,0
+
+[Window][贴图选择器]
+Pos=1046,19
+Size=428,822
+Collapsed=0
+DockId=0x0000001A,0
+
 [Docking][Data]
-DockSpace                 ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1680,1008 Split=X Selected=0x65657392
-  DockNode                ID=0x00000015 Parent=0x7C6B3D9B SizeRef=944,785 Split=X
-    DockNode              ID=0x00000001 Parent=0x00000015 SizeRef=1710,969 Split=X Selected=0x65657392
-      DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=1164,969 Split=X Selected=0x65657392
-        DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=1228,969 Split=X Selected=0x65657392
-          DockNode        ID=0x0000000A Parent=0x00000005 SizeRef=1661,969 Split=X Selected=0x65657392
-            DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1549,969 Split=X Selected=0x65657392
-              DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=1505,969 CentralNode=1 Selected=0x65657392
-              DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=413,969 Split=Y
-                DockNode  ID=0x00000012 Parent=0x00000011 SizeRef=413,174 Selected=0x1A02B0A3
-                DockNode  ID=0x00000013 Parent=0x00000011 SizeRef=413,178 Selected=0x7A56252A
-            DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=369,969 Split=Y
-              DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=369,123 Selected=0xDCDF1A23
-              DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=369,128 Split=Y
-                DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=369,123 Selected=0xC4692E8D
-                DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=369,128 Selected=0xECF6175A
-          DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=257,969 Split=Y
-            DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=233,218 Selected=0x56944108
-            DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=233,223 Selected=0xCA3ECDE9
-        DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=450,969 Selected=0x8B39F883
-      DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=152,969 Selected=0x57F56F05
-    DockNode              ID=0x00000002 Parent=0x00000015 SizeRef=208,969 Selected=0xD04E21C8
-  DockNode                ID=0x00000016 Parent=0x7C6B3D9B SizeRef=250,785 Selected=0xB0C67BD0
+DockSpace                     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1474,822 Split=X Selected=0x65657392
+  DockNode                    ID=0x00000019 Parent=0x7C6B3D9B SizeRef=1044,822 Split=X
+    DockNode                  ID=0x00000017 Parent=0x00000019 SizeRef=1316,822 Split=X
+      DockNode                ID=0x00000015 Parent=0x00000017 SizeRef=944,785 Split=X
+        DockNode              ID=0x00000001 Parent=0x00000015 SizeRef=1710,969 Split=X Selected=0x65657392
+          DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=1164,969 Split=X Selected=0x65657392
+            DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=1228,969 Split=X Selected=0x65657392
+              DockNode        ID=0x0000000A Parent=0x00000005 SizeRef=1661,969 Split=X Selected=0x65657392
+                DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1549,969 Split=X Selected=0x65657392
+                  DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=1505,969 CentralNode=1 Selected=0x65657392
+                  DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=413,969 Split=Y
+                    DockNode  ID=0x00000012 Parent=0x00000011 SizeRef=413,174 Selected=0x1A02B0A3
+                    DockNode  ID=0x00000013 Parent=0x00000011 SizeRef=413,178 Selected=0x7A56252A
+                DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=369,969 Split=Y
+                  DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=369,123 Selected=0xDCDF1A23
+                  DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=369,128 Split=Y
+                    DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=369,123 Selected=0xC4692E8D
+                    DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=369,128 Selected=0xECF6175A
+              DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=257,969 Split=Y
+                DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=233,218 Selected=0x56944108
+                DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=233,223 Selected=0xCA3ECDE9
+            DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=450,969 Selected=0x8B39F883
+          DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=152,969 Selected=0x57F56F05
+        DockNode              ID=0x00000002 Parent=0x00000015 SizeRef=208,969 Selected=0xD04E21C8
+      DockNode                ID=0x00000016 Parent=0x00000017 SizeRef=250,785 Selected=0xB0C67BD0
+    DockNode                  ID=0x00000018 Parent=0x00000019 SizeRef=156,822 Selected=0xEF6B8AA2
+  DockNode                    ID=0x0000001A Parent=0x7C6B3D9B SizeRef=428,822 Selected=0x8113C240
 
