相机 灯光翻译完成

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Level]
 Pos=0,19
-Size=1044,822
+Size=1103,822
 Collapsed=0
 DockId=0x00000014,0
 
@@ -38,44 +38,44 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][###Light Catalog]
-Pos=1423,19
-Size=257,497
+Pos=1217,19
+Size=257,270
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000001B,0
 
 [Window][Brush]
-Pos=1423,518
-Size=257,509
+Pos=1217,426
+Size=257,415
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Add Effect]
-Pos=1311,19
-Size=369,493
+Pos=1105,19
+Size=369,402
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Active Effects]
-Pos=1311,514
-Size=369,250
+Pos=1105,423
+Size=369,204
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Effect Options]
-Pos=1311,766
-Size=369,261
+Pos=1105,629
+Size=369,212
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Props]
-Pos=1267,19
-Size=413,497
+Pos=1061,19
+Size=413,405
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Prop Options]
-Pos=1267,518
-Size=413,509
+Pos=1061,426
+Size=413,415
 Collapsed=0
 DockId=0x00000013,0
 
@@ -137,6 +137,12 @@ Size=428,822
 Collapsed=0
 DockId=0x0000001A,0
 
+[Window][笔刷]
+Pos=1217,291
+Size=257,550
+Collapsed=0
+DockId=0x0000001C,0
+
 [Docking][Data]
 DockSpace                     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1474,822 Split=X Selected=0x65657392
   DockNode                    ID=0x00000019 Parent=0x7C6B3D9B SizeRef=1044,822 Split=X
@@ -157,7 +163,9 @@ DockSpace                     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1474
                     DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=369,123 Selected=0xC4692E8D
                     DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=369,128 Selected=0xECF6175A
               DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=257,969 Split=Y
-                DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=233,218 Selected=0x56944108
+                DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=233,218 Split=Y Selected=0x56944108
+                  DockNode    ID=0x0000001B Parent=0x00000008 SizeRef=257,270 Selected=0x56944108
+                  DockNode    ID=0x0000001C Parent=0x00000008 SizeRef=257,550 Selected=0x36F0A6C8
                 DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=233,223 Selected=0xCA3ECDE9
             DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=450,969 Selected=0x8B39F883
           DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=152,969 Selected=0x57F56F05
