--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Level]
 Pos=0,19
-Size=1222,822
+Size=1140,822
 Collapsed=0
 DockId=0x00000014,0
 
@@ -95,7 +95,7 @@ Size=650,390
 Collapsed=0
 
 [Window][###File Browser]
-Pos=80,140
+Pos=165,156
 Size=1040,520
 Collapsed=0
 
@@ -173,19 +173,25 @@ Size=332,368
 Collapsed=0
 DockId=0x00000026,0
 
+[Window][关卡]
+Pos=0,19
+Size=1090,822
+Collapsed=0
+DockId=0x00000014,0
+
 [Docking][Data]
 DockSpace                         ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=1474,822 Split=X Selected=0x65657392
-  DockNode                        ID=0x00000023 Parent=0x7C6B3D9B SizeRef=1140,822 Split=X
-    DockNode                      ID=0x0000001D Parent=0x00000023 SizeRef=1090,822 Split=X
-      DockNode                    ID=0x00000019 Parent=0x0000001D SizeRef=1044,822 Split=X
-        DockNode                  ID=0x00000017 Parent=0x00000019 SizeRef=1316,822 Split=X
-          DockNode                ID=0x00000015 Parent=0x00000017 SizeRef=944,785 Split=X
-            DockNode              ID=0x00000001 Parent=0x00000015 SizeRef=1710,969 Split=X Selected=0x65657392
+  DockNode                        ID=0x00000015 Parent=0x7C6B3D9B SizeRef=561,659 Split=X
+    DockNode                      ID=0x00000023 Parent=0x00000015 SizeRef=1140,822 Split=X
+      DockNode                    ID=0x0000001D Parent=0x00000023 SizeRef=1090,822 Split=X
+        DockNode                  ID=0x00000019 Parent=0x0000001D SizeRef=1044,822 Split=X
+          DockNode                ID=0x00000017 Parent=0x00000019 SizeRef=1316,822 Split=X
+            DockNode              ID=0x00000001 Parent=0x00000017 SizeRef=1710,969 Split=X Selected=0x65657392
               DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=1164,969 Split=X Selected=0x65657392
                 DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=1228,969 Split=X Selected=0x65657392
                   DockNode        ID=0x0000000A Parent=0x00000005 SizeRef=1661,969 Split=X Selected=0x65657392
                     DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1549,969 Split=X Selected=0x65657392
-                      DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=1505,969 CentralNode=1 Selected=0x65657392
+                      DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=1505,969 CentralNode=1 Selected=0x5089DAD3
                       DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=413,969 Split=Y
                         DockNode  ID=0x00000012 Parent=0x00000011 SizeRef=413,174 Selected=0x1A02B0A3
                         DockNode  ID=0x00000013 Parent=0x00000011 SizeRef=413,178 Selected=0x7A56252A
@@ -201,16 +207,16 @@ DockSpace                         ID=0x7C6B3D9B Window=0xA87D555D Pos=0,19 Size=
                     DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=233,223 Selected=0xCA3ECDE9
                 DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=450,969 Selected=0x8B39F883
               DockNode            ID=0x00000004 Parent=0x00000001 SizeRef=152,969 Selected=0x57F56F05
-            DockNode              ID=0x00000002 Parent=0x00000015 SizeRef=208,969 Selected=0xD04E21C8
-          DockNode                ID=0x00000016 Parent=0x00000017 SizeRef=250,785 Selected=0xB0C67BD0
-        DockNode                  ID=0x00000018 Parent=0x00000019 SizeRef=156,822 Selected=0xEF6B8AA2
-      DockNode                    ID=0x0000001A Parent=0x0000001D SizeRef=428,822 Selected=0x8113C240
-    DockNode                      ID=0x0000001E Parent=0x00000023 SizeRef=382,822 Split=Y Selected=0xBEAFA7C0
-      DockNode                    ID=0x0000001F Parent=0x0000001E SizeRef=304,402 Selected=0xBEAFA7C0
-      DockNode                    ID=0x00000020 Parent=0x0000001E SizeRef=304,418 Split=Y Selected=0x2CE91249
-        DockNode                  ID=0x00000021 Parent=0x00000020 SizeRef=304,208 Selected=0x2CE91249
-        DockNode                  ID=0x00000022 Parent=0x00000020 SizeRef=304,208 Selected=0xED214A78
-  DockNode                        ID=0x00000024 Parent=0x7C6B3D9B SizeRef=332,822 Split=Y Selected=0xEDDCE948
-    DockNode                      ID=0x00000025 Parent=0x00000024 SizeRef=332,452 Selected=0xEDDCE948
-    DockNode                      ID=0x00000026 Parent=0x00000024 SizeRef=332,368 Selected=0x1739ECFF
+            DockNode              ID=0x00000002 Parent=0x00000017 SizeRef=208,969 Selected=0xD04E21C8
+          DockNode                ID=0x00000018 Parent=0x00000019 SizeRef=156,822 Selected=0xEF6B8AA2
+        DockNode                  ID=0x0000001A Parent=0x0000001D SizeRef=428,822 Selected=0x8113C240
+      DockNode                    ID=0x0000001E Parent=0x00000023 SizeRef=382,822 Split=Y Selected=0xBEAFA7C0
+        DockNode                  ID=0x0000001F Parent=0x0000001E SizeRef=304,402 Selected=0xBEAFA7C0
+        DockNode                  ID=0x00000020 Parent=0x0000001E SizeRef=304,418 Split=Y Selected=0x2CE91249
+          DockNode                ID=0x00000021 Parent=0x00000020 SizeRef=304,208 Selected=0x2CE91249
+          DockNode                ID=0x00000022 Parent=0x00000020 SizeRef=304,208 Selected=0xED214A78
+    DockNode                      ID=0x00000024 Parent=0x00000015 SizeRef=332,822 Split=Y Selected=0xEDDCE948
+      DockNode                    ID=0x00000025 Parent=0x00000024 SizeRef=332,452 Selected=0xEDDCE948
+      DockNode                    ID=0x00000026 Parent=0x00000024 SizeRef=332,368 Selected=0x1739ECFF
+  DockNode                        ID=0x00000016 Parent=0x7C6B3D9B SizeRef=250,659 Selected=0xB0C67BD0
 
