修改工作流配置

--- a/.github/workflows/version-release.yml
+++ b/.github/workflows/version-release.yml
@@ -69,6 +69,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       id: create_release
       with:
+        tag_name: latest
         files: |
           ./artifacts/rained_linux-x64.tar.gz
           ./artifacts/rained_win-x64.zip
