--- a/.github/workflows/version-release.yml
+++ b/.github/workflows/version-release.yml
@@ -3,14 +3,13 @@ name: version-release
 on:
   push:
     branches: 
-      - main
+      - "main"
     tags:
       - v*
 
 jobs:
   windows-release-build:
     runs-on: windows-latest
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     steps:
       - name: checkout git code
         uses: actions/checkout@v4
