--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -11,7 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    permissions:
+      contents: write
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     
     steps:
     - name: Checkout
@@ -34,3 +36,10 @@ jobs:
       run: dotnet cake --os=win-x64 --target=Package
     - name: Print file
       run: ls
+    - name: Create release
+      uses: softprops/action-gh-release@v2
+      with:
+        name: "Push Build"
+        make_latest: false
+        body: Latest in-development push build.
+        files: ./rained_win-x64.zip
