--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Create release
       uses: softprops/action-gh-release@v2
       with:
+        tag_name: workflow-build
         name: "Push Build"
         make_latest: false
         body: Latest in-development push build.
