--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -39,16 +39,6 @@ jobs:
               run: |
                   git tag -f workflow-build HEAD
                   git push -f origin workflow-
-            - name: Get the latest commit details
-                run: |
-                    SHA=$(git rev-parse HEAD)
-                    AUTHOR_NAME=$(git log -1 --pretty=%an)
-                    AUTHOR_EMAIL=$(git log -1 --pretty=%ae)
-                    MESSAGE=$(git log -1 --pretty=%B)
-                    echo "::set-output name=sha::$SHA"
-                    echo "::set-output name=author_name::$AUTHOR_NAME"
-                    echo "::set-output name=author_email::$AUTHOR_EMAIL"
-                    echo "::set-output name=message::$MESSAGE"
             - name: Create release
               uses: softprops/action-gh-release@v2
               with:
@@ -58,8 +48,6 @@ jobs:
                   prerelease: true
                   body: |
                       当前版本为最新commit自动构建版本
-                      commit哈希: ${{ steps.latest_commit.outputs.sha }}
-                      by ${{ steps.latest_commit.outputs.author_name }} <${{ steps.latest_commit.outputs.author_email }}>  
-                      ${{ steps.latest_commit.outputs.message }}
+                      ${{ github.event.head_commit.message }}
                   files: ./rained_win-x64.zip
                   allowUpdates: true
