--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -90,12 +90,12 @@ Size=1474,820
 Collapsed=0
 
 [Window][Preferences]
-Pos=171,105
+Pos=227,205
 Size=858,536
 Collapsed=0
 
 [Window][###File Browser]
-Pos=80,114
+Pos=320,253
 Size=1040,520
 Collapsed=0
 
@@ -105,8 +105,8 @@ Size=244,174
 Collapsed=0
 
 [Window][Work area]
-Pos=0,19
-Size=1200,730
+Pos=0,25
+Size=1200,743
 Collapsed=0
 
 [Window][Guide]
@@ -175,14 +175,14 @@ Size=445,274
 Collapsed=0
 
 [Window][环境]
-Pos=942,50
-Size=250,691
+Pos=1378,62
+Size=294,957
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][建造]
-Pos=1014,50
-Size=178,691
+Pos=1494,50
+Size=178,969
 Collapsed=0
 DockId=0x00000018,0
 
@@ -235,14 +235,14 @@ Collapsed=0
 DockId=0x00000014,0
 
 [Window][关卡]
-Pos=8,50
-Size=1184,691
+Pos=8,62
+Size=1368,957
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][贴图选择器]
-Pos=772,50
-Size=420,691
+Pos=1252,50
+Size=420,969
 Collapsed=0
 DockId=0x00000028,0
 
@@ -282,8 +282,13 @@ Size=222,691
 Collapsed=0
 DockId=0x00000034,0
 
+[Window][modInfo 文件生成工具]
+Pos=149,194
+Size=381,406
+Collapsed=0
+
 [Docking][Data]
-DockSpace                     ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1184,691 Split=X Selected=0x5089DAD3
+DockSpace                     ID=0x172EB66B Window=0xD72479ED Pos=8,62 Size=1664,957 Split=X Selected=0x5089DAD3
   DockNode                    ID=0x00000033 Parent=0x172EB66B SizeRef=1440,969 Split=X
     DockNode                  ID=0x00000031 Parent=0x00000033 SizeRef=301,969 Selected=0xEDDCE948
     DockNode                  ID=0x00000032 Parent=0x00000033 SizeRef=1137,969 Split=X
@@ -294,9 +299,9 @@ DockSpace                     ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1184
         DockNode              ID=0x0000002B Parent=0x0000002E SizeRef=1053,969 Split=X
           DockNode            ID=0x0000001B Parent=0x0000002B SizeRef=1422,969 Split=X
             DockNode          ID=0x00000027 Parent=0x0000001B SizeRef=1242,969 Split=X
-              DockNode        ID=0x00000017 Parent=0x00000027 SizeRef=1484,969 Split=X
-                DockNode      ID=0x00000015 Parent=0x00000017 SizeRef=1412,969 CentralNode=1 Selected=0x5089DAD3
-                DockNode      ID=0x00000016 Parent=0x00000017 SizeRef=250,969 Selected=0xB0C67BD0
+              DockNode        ID=0x00000017 Parent=0x00000027 SizeRef=1484,969 Split=X Selected=0x5089DAD3
+                DockNode      ID=0x00000015 Parent=0x00000017 SizeRef=1368,969 CentralNode=1 Selected=0x5089DAD3
+                DockNode      ID=0x00000016 Parent=0x00000017 SizeRef=294,969 Selected=0xB0C67BD0
               DockNode        ID=0x00000018 Parent=0x00000027 SizeRef=178,969 Selected=0xEF6B8AA2
             DockNode          ID=0x00000028 Parent=0x0000001B SizeRef=420,969 Selected=0x8113C240
           DockNode            ID=0x0000001C Parent=0x0000002B SizeRef=240,969 Split=Y Selected=0x36F0A6C8
