--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -105,8 +105,8 @@ Size=244,174
 Collapsed=0
 
 [Window][Work area]
-Pos=0,25
-Size=1200,743
+Pos=0,19
+Size=1200,749
 Collapsed=0
 
 [Window][Guide]
@@ -175,14 +175,14 @@ Size=445,274
 Collapsed=0
 
 [Window][环境]
-Pos=1378,62
-Size=294,957
+Pos=898,50
+Size=294,710
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][建造]
-Pos=1494,50
-Size=178,969
+Pos=1014,50
+Size=178,710
 Collapsed=0
 DockId=0x00000018,0
 
@@ -235,14 +235,14 @@ Collapsed=0
 DockId=0x00000014,0
 
 [Window][关卡]
-Pos=8,62
-Size=1368,957
+Pos=8,50
+Size=762,710
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000017,0
 
 [Window][贴图选择器]
-Pos=1252,50
-Size=420,969
+Pos=772,50
+Size=420,710
 Collapsed=0
 DockId=0x00000028,0
 
@@ -283,32 +283,32 @@ Collapsed=0
 DockId=0x00000034,0
 
 [Window][modInfo 文件生成工具]
-Pos=149,194
-Size=381,406
+Pos=607,34
+Size=268,502
 Collapsed=0
 
 [Docking][Data]
-DockSpace                     ID=0x172EB66B Window=0xD72479ED Pos=8,62 Size=1664,957 Split=X Selected=0x5089DAD3
-  DockNode                    ID=0x00000033 Parent=0x172EB66B SizeRef=1440,969 Split=X
-    DockNode                  ID=0x00000031 Parent=0x00000033 SizeRef=301,969 Selected=0xEDDCE948
-    DockNode                  ID=0x00000032 Parent=0x00000033 SizeRef=1137,969 Split=X
-      DockNode                ID=0x0000002D Parent=0x00000032 SizeRef=345,969 Split=Y Selected=0xBEAFA7C0
-        DockNode              ID=0x0000002F Parent=0x0000002D SizeRef=345,511 Selected=0xBEAFA7C0
-        DockNode              ID=0x00000030 Parent=0x0000002D SizeRef=345,456 Selected=0x2CE91249
-      DockNode                ID=0x0000002E Parent=0x00000032 SizeRef=1317,969 Split=X
-        DockNode              ID=0x0000002B Parent=0x0000002E SizeRef=1053,969 Split=X
-          DockNode            ID=0x0000001B Parent=0x0000002B SizeRef=1422,969 Split=X
-            DockNode          ID=0x00000027 Parent=0x0000001B SizeRef=1242,969 Split=X
-              DockNode        ID=0x00000017 Parent=0x00000027 SizeRef=1484,969 Split=X Selected=0x5089DAD3
-                DockNode      ID=0x00000015 Parent=0x00000017 SizeRef=1368,969 CentralNode=1 Selected=0x5089DAD3
-                DockNode      ID=0x00000016 Parent=0x00000017 SizeRef=294,969 Selected=0xB0C67BD0
-              DockNode        ID=0x00000018 Parent=0x00000027 SizeRef=178,969 Selected=0xEF6B8AA2
-            DockNode          ID=0x00000028 Parent=0x0000001B SizeRef=420,969 Selected=0x8113C240
-          DockNode            ID=0x0000001C Parent=0x0000002B SizeRef=240,969 Split=Y Selected=0x36F0A6C8
-            DockNode          ID=0x00000029 Parent=0x0000001C SizeRef=362,266 Selected=0x56944108
-            DockNode          ID=0x0000002A Parent=0x0000001C SizeRef=362,701 Selected=0x36F0A6C8
-        DockNode              ID=0x0000002C Parent=0x0000002E SizeRef=262,969 Selected=0xED214A78
-  DockNode                    ID=0x00000034 Parent=0x172EB66B SizeRef=222,969 Selected=0x1739ECFF
+DockSpace                     ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1184,710 Split=X Selected=0x5089DAD3
+  DockNode                    ID=0x00000015 Parent=0x172EB66B SizeRef=888,710 Split=X
+    DockNode                  ID=0x00000033 Parent=0x00000015 SizeRef=1440,969 Split=X
+      DockNode                ID=0x00000031 Parent=0x00000033 SizeRef=301,969 Selected=0xEDDCE948
+      DockNode                ID=0x00000032 Parent=0x00000033 SizeRef=1137,969 Split=X
+        DockNode              ID=0x0000002D Parent=0x00000032 SizeRef=345,969 Split=Y Selected=0xBEAFA7C0
+          DockNode            ID=0x0000002F Parent=0x0000002D SizeRef=345,511 Selected=0xBEAFA7C0
+          DockNode            ID=0x00000030 Parent=0x0000002D SizeRef=345,456 Selected=0x2CE91249
+        DockNode              ID=0x0000002E Parent=0x00000032 SizeRef=1317,969 Split=X
+          DockNode            ID=0x0000002B Parent=0x0000002E SizeRef=1053,969 Split=X
+            DockNode          ID=0x0000001B Parent=0x0000002B SizeRef=1422,969 Split=X
+              DockNode        ID=0x00000027 Parent=0x0000001B SizeRef=1242,969 Split=X
+                DockNode      ID=0x00000017 Parent=0x00000027 SizeRef=1484,969 CentralNode=1 Selected=0x5089DAD3
+                DockNode      ID=0x00000018 Parent=0x00000027 SizeRef=178,969 Selected=0xEF6B8AA2
+              DockNode        ID=0x00000028 Parent=0x0000001B SizeRef=420,969 Selected=0x8113C240
+            DockNode          ID=0x0000001C Parent=0x0000002B SizeRef=240,969 Split=Y Selected=0x36F0A6C8
+              DockNode        ID=0x00000029 Parent=0x0000001C SizeRef=362,266 Selected=0x56944108
+              DockNode        ID=0x0000002A Parent=0x0000001C SizeRef=362,701 Selected=0x36F0A6C8
+          DockNode            ID=0x0000002C Parent=0x0000002E SizeRef=262,969 Selected=0xED214A78
+    DockNode                  ID=0x00000034 Parent=0x00000015 SizeRef=222,969 Selected=0x1739ECFF
+  DockNode                    ID=0x00000016 Parent=0x172EB66B SizeRef=294,710 Selected=0xB0C67BD0
 DockSpace                     ID=0x7C6B3D9B Pos=0,21 Size=1474,820 Split=X Selected=0x65657392
   DockNode                    ID=0x00000023 Parent=0x7C6B3D9B SizeRef=1140,822 Split=X
     DockNode                  ID=0x0000001D Parent=0x00000023 SizeRef=1090,822 Split=X
