--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -38,8 +38,8 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][###Light Catalog]
-Pos=1432,50
-Size=240,266
+Pos=1429,50
+Size=243,277
 Collapsed=0
 DockId=0x00000029,0
 
@@ -170,7 +170,7 @@ Size=1283,698
 Collapsed=0
 
 [Window][快捷键]
-Pos=26,262
+Pos=22,714
 Size=445,274
 Collapsed=0
 
@@ -235,8 +235,8 @@ Collapsed=0
 DockId=0x00000014,0
 
 [Window][关卡]
-Pos=325,50
-Size=1123,969
+Pos=8,50
+Size=1419,969
 Collapsed=0
 DockId=0x00000015,0
 
@@ -247,8 +247,8 @@ Collapsed=0
 DockId=0x00000028,0
 
 [Window][笔刷]
-Pos=1432,318
-Size=240,701
+Pos=1429,329
+Size=243,690
 Collapsed=0
 DockId=0x0000002A,0
 
@@ -284,26 +284,26 @@ DockId=0x00000034,0
 
 [Docking][Data]
 DockSpace                     ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1664,969 Split=X Selected=0x5089DAD3
-  DockNode                    ID=0x00000033 Parent=0x172EB66B SizeRef=1440,969 Split=X
-    DockNode                  ID=0x00000031 Parent=0x00000033 SizeRef=315,969 Selected=0xEDDCE948
-    DockNode                  ID=0x00000032 Parent=0x00000033 SizeRef=1123,969 Split=X
-      DockNode                ID=0x0000002D Parent=0x00000032 SizeRef=345,969 Split=Y Selected=0xBEAFA7C0
-        DockNode              ID=0x0000002F Parent=0x0000002D SizeRef=345,511 Selected=0xBEAFA7C0
-        DockNode              ID=0x00000030 Parent=0x0000002D SizeRef=345,456 Selected=0x2CE91249
-      DockNode                ID=0x0000002E Parent=0x00000032 SizeRef=1317,969 Split=X
-        DockNode              ID=0x0000002B Parent=0x0000002E SizeRef=1053,969 Split=X
-          DockNode            ID=0x0000001B Parent=0x0000002B SizeRef=1422,969 Split=X
-            DockNode          ID=0x00000027 Parent=0x0000001B SizeRef=1242,969 Split=X
+  DockNode                    ID=0x0000001B Parent=0x172EB66B SizeRef=1419,969 Split=X
+    DockNode                  ID=0x00000033 Parent=0x0000001B SizeRef=1440,969 Split=X
+      DockNode                ID=0x00000031 Parent=0x00000033 SizeRef=315,969 Selected=0xEDDCE948
+      DockNode                ID=0x00000032 Parent=0x00000033 SizeRef=1123,969 Split=X
+        DockNode              ID=0x0000002D Parent=0x00000032 SizeRef=345,969 Split=Y Selected=0xBEAFA7C0
+          DockNode            ID=0x0000002F Parent=0x0000002D SizeRef=345,511 Selected=0xBEAFA7C0
+          DockNode            ID=0x00000030 Parent=0x0000002D SizeRef=345,456 Selected=0x2CE91249
+        DockNode              ID=0x0000002E Parent=0x00000032 SizeRef=1317,969 Split=X
+          DockNode            ID=0x0000002B Parent=0x0000002E SizeRef=1053,969 Split=X
+            DockNode          ID=0x00000027 Parent=0x0000002B SizeRef=1242,969 Split=X
               DockNode        ID=0x00000017 Parent=0x00000027 SizeRef=1484,969 Split=X
                 DockNode      ID=0x00000015 Parent=0x00000017 SizeRef=1412,969 CentralNode=1 Selected=0x5089DAD3
                 DockNode      ID=0x00000016 Parent=0x00000017 SizeRef=250,969 Selected=0xB0C67BD0
               DockNode        ID=0x00000018 Parent=0x00000027 SizeRef=178,969 Selected=0xEF6B8AA2
-            DockNode          ID=0x00000028 Parent=0x0000001B SizeRef=420,969 Selected=0x8113C240
-          DockNode            ID=0x0000001C Parent=0x0000002B SizeRef=240,969 Split=Y Selected=0x36F0A6C8
-            DockNode          ID=0x00000029 Parent=0x0000001C SizeRef=362,266 Selected=0x56944108
-            DockNode          ID=0x0000002A Parent=0x0000001C SizeRef=362,701 Selected=0x36F0A6C8
-        DockNode              ID=0x0000002C Parent=0x0000002E SizeRef=262,969 Selected=0xED214A78
-  DockNode                    ID=0x00000034 Parent=0x172EB66B SizeRef=222,969 Selected=0x1739ECFF
+            DockNode          ID=0x00000028 Parent=0x0000002B SizeRef=420,969 Selected=0x8113C240
+          DockNode            ID=0x0000002C Parent=0x0000002E SizeRef=262,969 Selected=0xED214A78
+    DockNode                  ID=0x00000034 Parent=0x0000001B SizeRef=222,969 Selected=0x1739ECFF
+  DockNode                    ID=0x0000001C Parent=0x172EB66B SizeRef=243,969 Split=Y Selected=0x36F0A6C8
+    DockNode                  ID=0x00000029 Parent=0x0000001C SizeRef=243,277 Selected=0x56944108
+    DockNode                  ID=0x0000002A Parent=0x0000001C SizeRef=243,690 Selected=0x36F0A6C8
 DockSpace                     ID=0x7C6B3D9B Pos=0,21 Size=1474,820 Split=X Selected=0x65657392
   DockNode                    ID=0x00000023 Parent=0x7C6B3D9B SizeRef=1140,822 Split=X
     DockNode                  ID=0x0000001D Parent=0x00000023 SizeRef=1090,822 Split=X
