--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,27 +5,27 @@ plugins:
   - search
 
 nav:
-  - Home: index.md
-  - Manual:
-    - Brief: brief.md
-    - Installation and Updates: install-updates.md
-    - User interface: user-interface.md
-    - Editing the level:
-      - Overview: overview.md
-      - Environment: env.md
-      - Geometry: geo.md
-      - Tiles: tiles.md
-      - Cameras: cameras.md
-      - Light: light.md
-      - Effects: effects.md
-      - Props: props.md
-    - Rendering and playing: rendering.md
-    - Further reading: resources.md
-  - Developing: developing.md
+  - 主页: index.md
+  - 指南:
+    - 简洁: brief.md
+    - 安装和更新: install-updates.md
+    - 用户界面: user-interface.md
+    - 编辑关卡:
+      - 概观: overview.md
+      - 环境: env.md
+      - 几何: geo.md
+      - 瓦片: tiles.md
+      - 相机: cameras.md
+      - 灯光: light.md
+      - 效果: effects.md
+      - 道具: props.md
+    - 渲染和游玩: rendering.md
+    - 进一步阅读: resources.md
+  - 开发: developing.md
 
 theme:
   name: material
-  language: en
+  language: zh
   favicon:
     img/favicon.ico
   logo:
@@ -45,6 +45,6 @@ markdown_extensions:
       alternate_style: true
 
 site_url: ""
-docs_dir: "docs/en"
-site_dir: "dist/docs/en"
+docs_dir: "docs/zh"
+site_dir: "dist/docs/zh"
 use_directory_urls: False
