完善部分窗口翻译

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Work area]
-Pos=0,19
-Size=1200,781
+Pos=0,20
+Size=1680,1007
 Collapsed=0
 
 [Window][Debug##Default]
@@ -90,8 +90,8 @@ Size=174,177
 Collapsed=0
 
 [Window][关卡]
-Pos=8,50
-Size=1308,969
+Pos=8,52
+Size=1242,967
 Collapsed=0
 DockId=0x00000011,0
 
@@ -101,20 +101,20 @@ Size=599,266
 Collapsed=0
 
 [Window][环境]
-Pos=1318,50
-Size=354,969
+Pos=1318,52
+Size=354,967
 Collapsed=0
 DockId=0x0000001A,0
 
 [Window][建造]
-Pos=1454,50
-Size=218,969
+Pos=1454,52
+Size=218,967
 Collapsed=0
 DockId=0x0000001C,0
 
 [Window][贴图选择器]
-Pos=772,50
-Size=420,742
+Pos=1252,52
+Size=420,967
 Collapsed=0
 DockId=0x0000001E,0
 
@@ -164,8 +164,23 @@ Pos=124,160
 Size=1283,698
 Collapsed=0
 
+[Window][###File Browser]
+Pos=320,253
+Size=1040,520
+Collapsed=0
+
+[Window][Preferences]
+Pos=275,205
+Size=650,390
+Collapsed=0
+
+[Window][偏好]
+Pos=215,198
+Size=650,390
+Collapsed=0
+
 [Docking][Data]
-DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1664,969 Split=X Selected=0x65657392
+DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,52 Size=1664,967 Split=X Selected=0x65657392
   DockNode                        ID=0x00000027 Parent=0x172EB66B SizeRef=1294,969 Split=X
     DockNode                      ID=0x00000021 Parent=0x00000027 SizeRef=1292,969 Split=X
       DockNode                    ID=0x0000001D Parent=0x00000021 SizeRef=1242,969 Split=X
