完成汉化 修复列表色块遮挡文字问题

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Work area]
 Pos=0,19
-Size=1680,1008
+Size=1200,781
 Collapsed=0
 
 [Window][Debug##Default]
@@ -91,18 +91,18 @@ Collapsed=0
 
 [Window][关卡]
 Pos=8,50
-Size=1308,969
+Size=828,742
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][快捷键]
-Pos=228,680
+Pos=450,464
 Size=599,266
 Collapsed=0
 
 [Window][环境]
-Pos=1318,50
-Size=354,969
+Pos=838,50
+Size=354,742
 Collapsed=0
 DockId=0x0000001A,0
 
@@ -165,7 +165,7 @@ Size=1283,698
 Collapsed=0
 
 [Window][###File Browser]
-Pos=320,253
+Pos=80,140
 Size=1040,520
 Collapsed=0
 
@@ -175,12 +175,17 @@ Size=650,390
 Collapsed=0
 
 [Window][偏好]
-Pos=215,198
+Pos=517,318
 Size=650,390
 Collapsed=0
 
+[Window][###RenderPreview]
+Pos=168,98
+Size=1224,607
+Collapsed=0
+
 [Docking][Data]
-DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1664,969 Split=X Selected=0x65657392
+DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1184,742 Split=X Selected=0x65657392
   DockNode                        ID=0x00000027 Parent=0x172EB66B SizeRef=1294,969 Split=X
     DockNode                      ID=0x00000021 Parent=0x00000027 SizeRef=1292,969 Split=X
       DockNode                    ID=0x0000001D Parent=0x00000021 SizeRef=1242,969 Split=X
