完成部分 偏好设置 | 批量渲染 翻译

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Work area]
-Pos=0,20
-Size=1366,725
+Pos=0,19
+Size=1200,781
 Collapsed=0
 
 [Window][Debug##Default]
@@ -44,8 +44,8 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][###Light Catalog]
-Pos=1068,52
-Size=290,194
+Pos=902,50
+Size=290,210
 Collapsed=0
 DockId=0x0000001F,0
 
@@ -90,67 +90,67 @@ Size=174,177
 Collapsed=0
 
 [Window][关卡]
-Pos=8,52
-Size=928,685
+Pos=8,50
+Size=942,742
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][快捷键]
-Pos=138,425
+Pos=76,457
 Size=599,266
 Collapsed=0
 
 [Window][环境]
-Pos=1118,52
-Size=240,685
+Pos=952,50
+Size=240,742
 Collapsed=0
 DockId=0x0000001A,0
 
 [Window][建造]
-Pos=1140,52
-Size=218,685
+Pos=974,50
+Size=218,742
 Collapsed=0
 DockId=0x0000001C,0
 
 [Window][贴图选择器]
-Pos=938,52
-Size=420,685
+Pos=772,50
+Size=420,742
 Collapsed=0
 DockId=0x0000001E,0
 
 [Window][笔刷]
-Pos=1068,248
-Size=290,489
+Pos=902,262
+Size=290,530
 Collapsed=0
 DockId=0x00000020,0
 
 [Window][已添加特效]
-Pos=988,402
-Size=370,156
+Pos=822,429
+Size=370,170
 Collapsed=0
 DockId=0x00000026,0
 
 [Window][特效选项]
-Pos=988,560
-Size=370,177
+Pos=822,601
+Size=370,191
 Collapsed=0
 DockId=0x00000024,0
 
 [Window][添加特效]
-Pos=988,52
-Size=370,348
+Pos=822,50
+Size=370,377
 Collapsed=0
 DockId=0x00000025,0
 
 [Window][道具]
-Pos=990,52
-Size=368,440
+Pos=824,50
+Size=368,477
 Collapsed=0
 DockId=0x00000029,0
 
 [Window][道具选项]
-Pos=990,494
-Size=368,243
+Pos=824,529
+Size=368,263
 Collapsed=0
 DockId=0x0000002A,0
 
@@ -165,7 +165,7 @@ Size=1283,698
 Collapsed=0
 
 [Window][###File Browser]
-Pos=163,112
+Pos=80,140
 Size=1040,520
 Collapsed=0
 
@@ -175,7 +175,7 @@ Size=650,390
 Collapsed=0
 
 [Window][偏好]
-Pos=170,112
+Pos=300,146
 Size=727,431
 Collapsed=0
 
@@ -184,8 +184,13 @@ Pos=168,98
 Size=1224,607
 Collapsed=0
 
+[Window][Logs]
+Pos=82,158
+Size=515,236
+Collapsed=0
+
 [Docking][Data]
-DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,52 Size=1350,685 Split=X Selected=0x65657392
+DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1184,742 Split=X Selected=0x65657392
   DockNode                        ID=0x00000027 Parent=0x172EB66B SizeRef=1294,969 Split=X
     DockNode                      ID=0x00000021 Parent=0x00000027 SizeRef=1292,969 Split=X
       DockNode                    ID=0x0000001D Parent=0x00000021 SizeRef=1242,969 Split=X
