--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,33 +7,32 @@ plugins:
 nav:
   - 主页: index.md
   - 指南:
-    - 简洁: brief.md
+    - 快速指南: brief.md
     - 安装和更新: install-updates.md
     - 用户界面: user-interface.md
-    - 编辑关卡:
-      - 概观: overview.md
+    - 关卡编辑:
+      - 概述: overview.md
       - 环境: env.md
       - 几何: geo.md
-      - 图块: tiles.md
+      - 贴图: tiles.md
       - 相机: cameras.md
       - 灯光: light.md
-      - 效果: effects.md
+      - 特效: effects.md
       - 道具: props.md
-    - 渲染和游玩: rendering.md
-    - 进一步阅读: resources.md
+    - 渲染和运行: rendering.md
+    - 延伸阅读: resources.md
   - 开发: developing.md
 
 theme:
   name: material
   language: zh
-  favicon:
-    img/favicon.ico
-  logo:
-    img/favicon.ico
+  favicon: "img/favicon.ico"
+  logo: "img/favicon.ico"
   palette:
     scheme: slate
   features:
     - content.tabs.link
+
 markdown_extensions:
   - admonition
   - def_list
@@ -47,4 +46,4 @@ markdown_extensions:
 site_url: ""
 docs_dir: "docs/zh"
 site_dir: "dist/docs/zh"
-use_directory_urls: False
+use_directory_urls: false
