编辑器页面补充汉化 修复lua-imgui-gen括号未闭合

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Work area]
 Pos=0,19
-Size=1680,1008
+Size=1618,1008
 Collapsed=0
 
 [Window][Debug##Default]
@@ -44,7 +44,7 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][###Light Catalog]
-Pos=1382,50
+Pos=1320,50
 Size=290,485
 Collapsed=0
 DockId=0x00000029,0
@@ -92,13 +92,13 @@ Collapsed=0
 DockId=0x00000018,0
 
 [Window][###File Browser]
-Pos=80,140
+Pos=289,253
 Size=1040,520
 Collapsed=0
 
 [Window][关卡]
-Pos=362,50
-Size=1310,969
+Pos=306,50
+Size=1304,969
 Collapsed=0
 DockId=0x00000011,0
 
@@ -109,8 +109,8 @@ Collapsed=0
 DockId=0x00000019,0
 
 [Window][快捷键]
-Pos=712,667
-Size=458,354
+Pos=672,611
+Size=600,346
 Collapsed=0
 
 [Window][建造]
@@ -126,7 +126,7 @@ Collapsed=0
 DockId=0x0000001D,0
 
 [Window][笔刷]
-Pos=1382,537
+Pos=1320,537
 Size=290,482
 Collapsed=0
 DockId=0x0000002A,0
@@ -162,21 +162,26 @@ Collapsed=0
 DockId=0x00000024,0
 
 [Window][###RenderPreview]
-Pos=58,125
+Pos=54,105
 Size=1542,829
 Collapsed=0
 
+[Window][偏好]
+Pos=484,318
+Size=650,390
+Collapsed=0
+
 [Docking][Data]
-DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1664,969 Split=X Selected=0x65657392
+DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=1602,969 Split=X Selected=0x65657392
   DockNode                        ID=0x00000025 Parent=0x172EB66B SizeRef=352,969 Split=Y Selected=0x1739ECFF
     DockNode                      ID=0x00000027 Parent=0x00000025 SizeRef=352,312 Selected=0x1739ECFF
     DockNode                      ID=0x00000028 Parent=0x00000025 SizeRef=352,655 Selected=0xEDDCE948
   DockNode                        ID=0x00000026 Parent=0x172EB66B SizeRef=1310,969 Split=X
     DockNode                      ID=0x0000001F Parent=0x00000026 SizeRef=372,969 Split=Y Selected=0xED214A78
-      DockNode                    ID=0x00000021 Parent=0x0000001F SizeRef=280,286 Selected=0xBEAFA7C0
+      DockNode                    ID=0x00000021 Parent=0x0000001F SizeRef=280,286 Selected=0xAD59EFF9
       DockNode                    ID=0x00000022 Parent=0x0000001F SizeRef=280,681 Split=Y Selected=0x2CE91249
-        DockNode                  ID=0x00000023 Parent=0x00000022 SizeRef=280,345 Selected=0x2CE91249
-        DockNode                  ID=0x00000024 Parent=0x00000022 SizeRef=280,334 Selected=0xED214A78
+        DockNode                  ID=0x00000023 Parent=0x00000022 SizeRef=280,345 Selected=0x3F1F5A70
+        DockNode                  ID=0x00000024 Parent=0x00000022 SizeRef=280,334 Selected=0x1BBA5BC7
     DockNode                      ID=0x00000020 Parent=0x00000026 SizeRef=1290,969 Split=X
       DockNode                    ID=0x0000001D Parent=0x00000020 SizeRef=337,969 Selected=0x8113C240
       DockNode                    ID=0x0000001E Parent=0x00000020 SizeRef=1325,969 Split=X
