部分窗口汉化

--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -92,7 +92,7 @@ Collapsed=0
 DockId=0x00000018,0
 
 [Window][###File Browser]
-Pos=289,253
+Pos=80,140
 Size=1040,520
 Collapsed=0
 
@@ -121,7 +121,7 @@ DockId=0x0000001B,0
 
 [Window][贴图选择器]
 Pos=8,50
-Size=337,969
+Size=433,969
 Collapsed=0
 DockId=0x0000001D,0
 
@@ -167,8 +167,13 @@ Size=1542,829
 Collapsed=0
 
 [Window][偏好]
-Pos=484,318
-Size=650,390
+Pos=282,78
+Size=648,639
+Collapsed=0
+
+[Window][Rained Debug]
+Pos=60,60
+Size=373,642
 Collapsed=0
 
 [Docking][Data]
@@ -183,8 +188,8 @@ DockSpace                         ID=0x172EB66B Window=0xD72479ED Pos=8,50 Size=
         DockNode                  ID=0x00000023 Parent=0x00000022 SizeRef=280,345 Selected=0x3F1F5A70
         DockNode                  ID=0x00000024 Parent=0x00000022 SizeRef=280,334 Selected=0x1BBA5BC7
     DockNode                      ID=0x00000020 Parent=0x00000026 SizeRef=1290,969 Split=X
-      DockNode                    ID=0x0000001D Parent=0x00000020 SizeRef=337,969 Selected=0x8113C240
-      DockNode                    ID=0x0000001E Parent=0x00000020 SizeRef=1325,969 Split=X
+      DockNode                    ID=0x0000001D Parent=0x00000020 SizeRef=433,969 Selected=0x8113C240
+      DockNode                    ID=0x0000001E Parent=0x00000020 SizeRef=1167,969 Split=X
         DockNode                  ID=0x0000001B Parent=0x0000001E SizeRef=245,969 Selected=0xEF6B8AA2
         DockNode                  ID=0x0000001C Parent=0x0000001E SizeRef=1417,969 Split=X
           DockNode                ID=0x00000019 Parent=0x0000001C SizeRef=296,742 Selected=0xB0C67BD0
