--- a/config/imgui.ini
+++ b/config/imgui.ini
@@ -80,14 +80,14 @@ Collapsed=0
 DockId=0x00000014,0
 
 [Window][###TileGfxPreview]
-Pos=630,504
-Size=281,286
+Pos=792,52
+Size=281,685
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][###TileSpecPreview]
-Pos=913,504
-Size=277,286
+Pos=1075,52
+Size=277,685
 Collapsed=0
 DockId=0x00000018,0
 
@@ -97,25 +97,25 @@ Size=1040,520
 Collapsed=0
 
 [Window][关卡]
-Pos=289,52
-Size=831,685
+Pos=201,52
+Size=1151,685
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][快捷键]
-Pos=396,493
-Size=644,222
+Pos=690,427
+Size=644,312
 Collapsed=0
 
 [Window][环境]
-Pos=8,50
-Size=191,687
+Pos=8,52
+Size=191,685
 Collapsed=0
 DockId=0x00000019,0
 
 [Window][建造]
 Pos=8,52
-Size=183,685
+Size=156,685
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -162,14 +162,35 @@ Collapsed=0
 DockId=0x0000002A,0
 
 [Window][偏好]
-Pos=339,173
-Size=650,349
+Pos=231,268
+Size=931,371
 Collapsed=0
 
 [Window][Asset Manager]
-Pos=175,135
+Pos=335,155
 Size=700,420
 Collapsed=0
+
+[Window][Logs]
+Pos=221,225
+Size=608,422
+Collapsed=0
+
+[Window][资产管理器]
+Pos=330,162
+Size=700,420
+Collapsed=0
+
+[Window][###RenderPreview]
+Pos=11,13
+Size=1320,705
+Collapsed=0
+
+[Table][0x68881860,3]
+RefScale=14
+Column 0  Width=74
+Column 1  Weight=1.0000
+Column 2  Width=35
 
 [Docking][Data]
 DockSpace                               ID=0x172EB66B Window=0xD72479ED Pos=8,52 Size=1344,685 Split=X Selected=0x65657392
@@ -187,8 +208,8 @@ DockSpace                               ID=0x172EB66B Window=0xD72479ED Pos=8,52
           DockNode                      ID=0x00000020 Parent=0x00000022 SizeRef=1039,687 Split=X
             DockNode                    ID=0x0000001D Parent=0x00000020 SizeRef=257,687 Selected=0x8113C240
             DockNode                    ID=0x0000001E Parent=0x00000020 SizeRef=1085,687 Split=X
-              DockNode                  ID=0x0000001B Parent=0x0000001E SizeRef=183,687 Selected=0xEF6B8AA2
-              DockNode                  ID=0x0000001C Parent=0x0000001E SizeRef=1159,687 Split=X
+              DockNode                  ID=0x0000001B Parent=0x0000001E SizeRef=156,687 Selected=0xEF6B8AA2
+              DockNode                  ID=0x0000001C Parent=0x0000001E SizeRef=1186,687 Split=X
                 DockNode                ID=0x00000019 Parent=0x0000001C SizeRef=191,687 Selected=0xB0C67BD0
                 DockNode                ID=0x0000001A Parent=0x0000001C SizeRef=1151,687 Split=X
                   DockNode              ID=0x00000003 Parent=0x0000001A SizeRef=1758,922 Split=X
